sources = files(
    'blklst.c',
    'blockopt.c',
    'cpp.c',
    'debug.c',
    'ee.c',
    'el.c',
    'enum.c',
    'err.c',
    'evalu8.c',
    'eh.c',
    'exp.c',
    'exp2.c',
    'file.c',
    'filename.c',
    'func.c',
    'adl.c',
    'getcmd.c',
    'ini.c',
    'init.c',
    'inline.c',
    'loadline.d',
    'msc.c',
    'nspace.c',
    'nwc.c',
    'os.c',
    'out.c',
    'ph.c',
    'ppexp.c',
    'pragma.c',
    'pseudo.c',
    'struct.c',
    'symbol.c',
    'template.c',
    'tk.c',
    'token.c',
    'type.c',
    'dt.c',
    'var.c',
    'nteh.c',
    'rtlsym.c',
    'rtti.c',
    'scope.c',
    'tdbx.c',
    'util.c',
    'html.c',
    'unialpha.c',
    'entity.c',
    'aa.c',
    'ti_achar.c',
    'ti_pvoid.c',
    'backconfig.c',
    'cgcod.c',
    'cod1.c',
    'cod2.c',
    'cod3.c',
    'cod4.c',
    'cod5.c',
    'cg87.c',
    'cgxmm.c',
    'code.c',
    'cg.c',
    'cgelem.c',
    'cgcs.c',
    'cgcv.c',
    'tytostr.c',
    'cgen.c',
    'cgreg.c',
    'compress.c',
    'cgobj.c',
    'cgsched.c',
    'objrecor.c',
    'iasm.c',
    'ptrntab.c',
    'newman.c',
    'dwarf.c',
    'go.c',
    'gloop.c',
    'gother.c',
    'gflow.c',
    'gdag.c',
    'glocal.c',
    'gsroa.c',
    'pdata.c',
    'cv8.c',
    'errmsgs2.c',
    'outbuf.c',
    'bcomplex.c',
    'htod.c',
    'speller.c',
    'utf.c',
    'divcoeff.c',
)
