sources = files(
    'blklst.cpp',
    'blockopt.cpp',
    'cpp.cpp',
    'debug.cpp',
    'ee.cpp',
    'el.cpp',
    'enum.cpp',
    'err.cpp',
    'evalu8.cpp',
    'eh.cpp',
    'exp.cpp',
    'exp2.cpp',
    'file.cpp',
    'filename.cpp',
    'func.cpp',
    'adl.cpp',
    'getcmd.cpp',
    'ini.cpp',
    'init.cpp',
    'inline.cpp',
    'loadline.d',
    'msc.cpp',
    'nspace.cpp',
    'nwc.cpp',
    'os.cpp',
    'out.cpp',
    'ph.cpp',
    'ppexp.cpp',
    'pragma.cpp',
    'pseudo.cpp',
    'struct.cpp',
    'symbol.cpp',
    'template.cpp',
    'tk.cpp',
    'token.cpp',
    'type.cpp',
    'dt.cpp',
    'var.cpp',
    'nteh.cpp',
    'rtlsym.cpp',
    'rtti.cpp',
    'scope.cpp',
    'tdbx.cpp',
    'util.cpp',
    'html.cpp',
    'unialpha.cpp',
    'entity.cpp',
    'aa.cpp',
    'ti_achar.cpp',
    'ti_pvoid.cpp',
    'backconfig.cpp',
    'cgcod.cpp',
    'cod1.cpp',
    'cod2.cpp',
    'cod3.cpp',
    'cod4.cpp',
    'cod5.cpp',
    'cg87.cpp',
    'cgxmm.cpp',
    'code.cpp',
    'cg.cpp',
    'cgelem.cpp',
    'cgcs.cpp',
    'cgcv.cpp',
    'tytostr.cpp',
    'cgen.cpp',
    'cgreg.cpp',
    'compress.cpp',
    'cgobj.cpp',
    'cgsched.cpp',
    'objrecor.cpp',
    'iasm.cpp',
    'ptrntab.cpp',
    'newman.cpp',
    'dwarf.cpp',
    'go.cpp',
    'gloop.cpp',
    'gother.cpp',
    'gflow.cpp',
    'gdag.cpp',
    'glocal.cpp',
    'gsroa.cpp',
    'pdata.cpp',
    'cv8.cpp',
    'errmsgs2.cpp',
    'outbuf.cpp',
    'bcomplex.cpp',
    'htod.cpp',
    'speller.cpp',
    'utf.cpp',
    'divcoeff.cpp',
)
